# Templates

./: CMakeLists.txt
01_Function_templates/: max1.cpp  max1.hpp  max2.cpp  max3ref.cpp  max3val.cpp  max4.cpp  maxauto.hpp  maxcommon.hpp  maxdecltypedecay.hpp
02_class_templates/: stack1.hpp  stack1test.cpp  stack2.hpp  stack3.cpp  stack3.hpp  stackpartspec.hpp
03_nontype_template_parameters/: stackauto.cpp  stackauto.hpp  stacknotype.cpp  stacknotype.hpp
04_variadic_templates/: addspace.hpp  foldtraverse.cpp  variadic.cpp  variadic.hpp  varprint2.cpp  varprint2.hpp
05_tricky_basics/: arrays.cpp  arrays.hpp  boolstring.hpp  boolstringgetbool.hpp  member_templates.cpp  right_value.cpp  stack5assign.hpp  stack5decl.hpp  stack6assign.hpp  stack6decl.hpp  stack7assign.hpp  stack7decl.hpp  stack9.cpp  stack9.hpp  variable_templates.cpp
06_move_semantics/: move.cpp  specialmemtmp11.cpp  specialmemtmpl2.cpp  specialmemtmpl3.cpp  specialmemtmpl3.hpp
07_value_reference/: cref.cpp
08_compile-time_programming/: isprime.cpp  isprime.hpp  isprime11.hpp  isprime14.hpp  len.hpp  print.hpp
11_generic_libraries/: defer_evaluation.cpp  defer_evaluation.hpp  foreach.cpp  foreach.hpp  foreachinvoke.cpp  foreachinvoke.hpp  invokeret.hpp
